<resources>
    <string name="app_name">RestaurantApp</string>

    //Login
    <string name="phno">Phone Number:</string>
    <string name="name">Name:</string>
    <string name="e_mail">EMail:</string>
    <string name="submit">Submit</string>
    <string name="advanced">Advanced</string>
    <string name="catagory">CATAGORY</string>

    <string name="Phone_num_hint"><font size="12">Phone No</font></string>
    <string name="name_hint"><font size="12">Name</font></string>
    <string name="e_mail_hint"><font size="12">E Mail id</font></string>
    <string name="title_activity_menu_navigation">MenuNavigationActivity</string>
    <string name="addresses_hint"><font size="12">Address</font></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_icon">Menu</string>
    <string name="favourite_icon">Favourite</string>
    <string name="my_order_icon">My Orders</string>
    <string name="history_icon">History</string>
    <string name="today_spl_icon">Today Special</string>
    <string name="offer_icon">Offers</string>
    <string name="feedback_icon">Feedback</string>
    <string name="about_us_icon">Feedback</string>
    <string name="price">Total : 0.0</string>
    <string name="place_order">Place Order</string>
    <string name="update_item">Update Item</string>
    <string name="category">Category List</string>

    <string name="suggestion_hint">Please Enter Your Comments...</string>

    <!--toolbar text-->
    <string name="content_fragment">Dashboard</string>
    <string name="category_fragment">Category</string>
    <string name="item_fragment">Item</string>
    <string name="my_order">My Orders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="order_placed">Your Order Has been placed</string>

    <!-- user type -->
    <string name="regular_user">Regular User</string>
    <string name="new_user">New User</string>
    <string name="existing_user">Existing User</string>
    <string name="one_time_user">One Time User</string>
    <string name="question">As our customer, your opinions are very valuable to us. Please take a few minutes to rate the following:</string>

    <!-- rating question -->
    <string name="ques1">Our Food Taste -</string>
    <string name="ques2">Our Food Quality - </string>
    <string name="ques3">Our Service - </string>
    <string name="ques4">Restaurant Cleanliness -</string>
</resources>
