<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nickteck.restaurantapp.fragment.MyOrdersFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/myOrderRecycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layoutAnimation="@anim/layout_animation_fall_down"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
           android:background="@color/colorPrimaryDark"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
               android:gravity="center"
                android:textColor="@color/white_color"
                android:textStyle="bold"
                android:id="@+id/txtTotalPrice"
                android:textSize="@dimen/item_heading_text_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="20dp"
            android:background="@color/orange_color"
            android:gravity="center"
            android:id="@+id/ldtPlaceOrder">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_place_order"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_order"
                android:gravity="center"
                android:textColor="@color/white_color"
                android:textStyle="bold"
                android:textSize="@dimen/item_heading_text_size"
                android:id="@+id/txtPlaceItem"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_item"
                android:gravity="center"
                android:textColor="@color/white_color"
                android:textStyle="bold"
                android:textSize="@dimen/item_heading_text_size"
                android:visibility="gone"
                android:id="@+id/txtUpdateItem"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
