<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:id="@+id/sclMainView">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/mobile"
            android:paddingTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
        <!--    <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phno"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/login_text_size"
                />-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Phone_num_hint"
                android:textColorHint="@color/white_color"
                android:textColor="@color/white_color"
                android:maxLength="10"
                android:layout_gravity="center"
                android:inputType="phone"
                android:textSize="17sp"
                android:id="@+id/edtPhone"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           android:layout_gravity="center"
            android:paddingTop="20dp">
           <!-- <TextView
                android:layout_width= "match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/login_text_size"/>-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:textColorHint="@color/white_color"
                android:textColor="@color/white_color"
                android:textSize="17sp"
                android:maxLines="1"
                android:inputType="text"
                android:id="@+id/edtName"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:id="@+id/ldtEMail_id">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_e_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail_hint"
                    android:textColorHint="@color/white_color"
                    android:textColor="@color/white_color"
                    android:textSize="17sp"
                    android:id="@+id/edtMailId"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/WhiteCheck"
                android:buttonTint="@color/white_color"
                android:id="@+id/chkAdvanced"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced"
                android:textColor="@color/white_color"
                android:textSize="@dimen/advanced_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:theme="@style/PrimaryFlatButton"
                android:textColor="@color/white_color"
                android:background="@color/orange_color"
                android:id="@+id/btnSubmitLogin"/>
        </LinearLayout>

    </LinearLayout>


    </LinearLayout>

</ScrollView>